[metadata]
name = musictoolbox
version = attr: musictoolbox.__version__
author = Manuel Amador (Rudd-O)
author_email = rudd-o@rudd-o.com
description = Utilities to help you groom your music collection
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv2
url = https://github.com/Rudd-O/musictoolbox
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities
keywords = mp3 ogg mkv transcoding aac mp4 video flv flac

[options]
package_dir =
    = lib
packages = find:
install_requires =
    mutagen
    networkx
    pyxdg
    psutil
    PyYAML
    packaging

[options.packages.find]
where = lib

[options.package_data]
musictoolbox = py.typed

[options.entry_points]
musictoolbox.transcoding.codecs =
    copy = musictoolbox.transcoding.codecs.basic:Copy
    flvmp4webmtomp3 = musictoolbox.transcoding.codecs.gstreamerffmpeg:FlvMp4WebmToMp3
    extractaudio = musictoolbox.transcoding.codecs.gstreamerffmpeg:ExtractAudio
    flvmp4webmtowav = musictoolbox.transcoding.codecs.gstreamerffmpeg:FlvMp4WebmToWav
    audiotomp3 = musictoolbox.transcoding.codecs.gstreamerffmpeg:AudioToMp3
    audiotowav = musictoolbox.transcoding.codecs.gstreamerffmpeg:AudioToWav
    wavtoogg = musictoolbox.transcoding.codecs.gstreamerffmpeg:WavToOgg
    wavtoopus = musictoolbox.transcoding.codecs.gstreamerffmpeg:WavToOpus
console_scripts = 
    cpm3u = musictoolbox.cmd.cpm3u:main
    detect-broken-ape-tags = musictoolbox.cmd.detect:detect_broken_ape_tags
    detect-missing-ape-tags = musictoolbox.cmd.detect:detect_missing_ape_tags
    fixplaylist = musictoolbox.cmd.fixplaylist:main
    genplaylist = musictoolbox.cmd.genplaylist:main
    doreplaygain = musictoolbox.cmd.doreplaygain:main
    viewmp3norm = musictoolbox.cmd.view:viewmp3norm
    viewtargs = musictoolbox.cmd.view:viewtags
    make-album-playlist = musictoolbox.cmd.makealbumplaylist:main
    removemusicbrainz = musictoolbox.cmd.removemusicbrainz:main
    scanalbumartists = musictoolbox.cmd.scanalbumartists:main
    singlencode = musictoolbox.transcoding.cli:main
    syncplaylists = musictoolbox.sync.cli:main
